# uniffi-bindgen-node-js

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  PROMPT.md  README.md
.github/workflows/: ci-publish.yml
examples/support/: mod.rs
fixtures/basic-fixture/: Cargo.toml
fixtures/callback-fixture/: Cargo.toml
fixtures/docs-fixture/: Cargo.toml  build.rs
scripts/leaks/: common.mjs  runtime-basic-soak.mjs  runtime-callback-soak.mjs  runtime-load-unload-child.mjs  runtime-load-unload-soak.mjs
src/: cli.rs  lib.rs  main.rs
src/bindings/: api.rs  ffi.rs  ffi_ir.rs  layout.rs  mod.rs  package_writer.rs  runtime.rs  spec.rs  target.rs  templates.rs
src/node/: component_selection.rs  config.rs  mod.rs  paths.rs  validation.rs
src/node_v2/: component_selection.rs  config.rs  mod.rs  package_layout.rs  paths.rs  validation.rs
src/subcommands/: generate.rs  mod.rs
templates/api/: public-api.d.ts.j2  public-api.js.j2
templates/component/: component-ffi.d.ts.j2  component-ffi.js.j2  component.d.ts.j2  component.js.j2
templates/package/: index.d.ts.j2  index.js.j2  package.json.j2
templates/runtime/: async-rust-call.d.ts.j2  async-rust-call.js.j2  callbacks.d.ts.j2  callbacks.js.j2  (+12 more)
tests/: codegen_snapshots.rs  ffi_initialization_codegen.rs  fixture_cdylib_build.rs  node_async_runtime_tests.rs  node_benchmarks.rs  node_buffer_tests.rs  node_package_generation.rs  node_real_koffi_tests.rs  node_smoke_tests.rs  node_typescript_tests.rs  slatedb_build_tests.rs  slatedb_node_smoke_tests.rs  slatedb_package_generation.rs  unsupported_feature_diagnostics.rs
(+47 files in other folders)
