[package]
name = "uniffi-bindgen-node-js"
version = "0.1.0"
edition = "2024"

[lib]
name = "uniffi_bindgen_node_js"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen-node-js"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askama = "0.12"
camino = "1"
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
heck = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textwrap = "0.16"
toml = "0.8"
uniffi = "=0.29.5"
uniffi_bindgen = "=0.29.5"
