[package]
name = "uniffi-bindgen-node-js"
version = "0.0.11"
edition = "2024"
license = "Apache-2.0"
description = "Generate ESM Node.js bindings for UniFFI cdylibs using koffi."
repository = "https://github.com/criccomini/uniffi-bindgen-node-js"

[lib]
name = "uniffi_bindgen_node_js"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen-node-js"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askama = "0.14"
camino = "1"
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["derive"] }
heck = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
textwrap = "0.16"
toml = "0.9"
uniffi = "=0.31.0"
uniffi_bindgen = "=0.31.0"
uniffi_meta = "=0.31.0"

[dev-dependencies]
insta = "1"
